--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "formik": "^2.4.1",
+    "framer-motion": "^10.12.16",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-transition-group": "^4.4.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/react-transition-group": "^4.4.6",
     "encoding": "^0.1.13",
     "sass": "^1.62.1"
   }
