--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
     "react-transition-group": "^4.4.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
-    "yup": "^1.2.0"
+    "world-countries": "^4.0.0",
+    "yup": "^1.2.0",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/react-transition-group": "^4.4.6",
