--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "formik": "^2.4.1",
     "framer-motion": "^10.12.16",
     "next": "13.4.4",
+    "next-cloudinary": "^4.12.0",
     "postcss": "8.4.24",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-transition-group": "^4.4.5",
     "tailwindcss": "3.3.2",
