--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
+    "react-select": "^5.7.3",
     "react-transition-group": "^4.4.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
