--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss": "8.4.24",
     "query-string": "^8.1.0",
     "react": "18.2.0",
+    "react-datepicker": "^4.13.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@types/react-transition-group": "^4.4.6",
     "encoding": "^0.1.13",
+    "react-textarea-autosize": "^8.4.1",
     "sass": "^1.62.1"
   }
 }
