--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^4.9.0",
     "react-paginate": "^8.2.0",
     "react-select": "^5.7.3",
+    "react-slider": "^2.0.5",
     "react-transition-group": "^4.4.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
@@ -37,6 +38,7 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@types/react-slider": "^1.3.1",
     "@types/react-transition-group": "^4.4.6",
     "encoding": "^0.1.13",
     "react-textarea-autosize": "^8.4.1",
