--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "13.4.4",
     "formik": "^2.4.1",
     "framer-motion": "^10.12.16",
+    "leaflet-geosearch": "^3.8.0",
     "next": "13.4.4",
     "next-cloudinary": "^4.12.0",
     "postcss": "8.4.24",
@@ -31,6 +32,7 @@
     "react-select": "^5.7.3",
     "react-slider": "^2.0.5",
     "react-transition-group": "^4.4.5",
+    "react-window": "^1.8.9",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "yup": "^1.2.0",
@@ -39,6 +41,7 @@
   "devDependencies": {
     "@types/react-slider": "^1.3.1",
     "@types/react-transition-group": "^4.4.6",
+    "@types/react-window": "^1.8.5",
     "encoding": "^0.1.13",
     "react-textarea-autosize": "^8.4.1",
     "sass": "^1.62.1"
