--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-window": "^1.8.9",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
+    "uuid": "^9.0.0",
     "yup": "^1.2.0",
     "zustand": "^4.3.8"
   },
@@ -42,6 +43,7 @@
     "@types/react-slider": "^1.3.1",
     "@types/react-transition-group": "^4.4.6",
     "@types/react-window": "^1.8.5",
+    "@types/uuid": "^9.0.2",
     "encoding": "^0.1.13",
     "react-textarea-autosize": "^8.4.1",
     "sass": "^1.62.1"
