--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "compressorjs": "^1.2.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "formik": "^2.4.1",
     "framer-motion": "^10.12.16",
     "leaflet-geosearch": "^3.8.0",
-    "next": "13.4.4",
+    "next": "^13.4.6",
     "next-cloudinary": "^4.12.0",
     "postcss": "8.4.24",
     "query-string": "^8.1.0",
