--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "eslint-config-next": "13.4.4",
     "formik": "^2.4.1",
     "framer-motion": "^10.12.16",
+    "leaflet": "^1.9.4",
+    "leaflet-fullscreen": "^1.0.2",
     "leaflet-geosearch": "^3.8.0",
     "next": "^13.4.6",
     "next-cloudinary": "^4.12.0",
@@ -29,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
+    "react-leaflet": "^4.2.1",
     "react-paginate": "^8.2.0",
     "react-select": "^5.7.3",
     "react-slider": "^2.0.5",
@@ -41,6 +44,7 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.3",
     "@types/react-slider": "^1.3.1",
     "@types/react-transition-group": "^4.4.6",
     "@types/react-window": "^1.8.5",
