--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-custom-control": "^1.3.5",
     "react-paginate": "^8.2.0",
     "react-select": "^5.7.3",
     "react-slider": "^2.0.5",
