--- a/package.json
+++ b/package.json
@@ -22,12 +22,10 @@
     "leaflet": "^1.9.4",
     "leaflet-fullscreen": "^1.0.2",
     "leaflet-geosearch": "^3.8.0",
-    "next": "^13.4.6",
-    "next-cloudinary": "^4.12.0",
+    "next": "^13.4.7",
     "postcss": "8.4.24",
     "query-string": "^8.1.0",
     "react": "18.2.0",
-    "react-datepicker": "^4.13.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
@@ -41,8 +39,7 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "uuid": "^9.0.0",
-    "yup": "^1.2.0",
-    "zustand": "^4.3.8"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.3",
