--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.3",
+    "@types/leaflet-fullscreen": "^1.0.6",
     "@types/react-slider": "^1.3.1",
     "@types/react-transition-group": "^4.4.6",
     "@types/react-window": "^1.8.5",
