--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "leaflet-geosearch": "^3.8.0",
     "linkify-html": "^4.1.1",
     "linkifyjs": "^4.1.1",
+    "lodash.debounce": "^4.0.8",
     "next": "^13.4.10",
     "postcss": "8.4.24",
     "query-string": "^8.1.0",
@@ -47,6 +48,7 @@
   "devDependencies": {
     "@types/leaflet": "^1.9.3",
     "@types/leaflet-fullscreen": "^1.0.6",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/react-slider": "^1.3.1",
     "@types/react-transition-group": "^4.4.6",
     "@types/react-window": "^1.8.5",
