--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-facebook": "^9.0.12",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-leaflet": "^4.2.1",
