--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "10.4.14",
     "cloudinary": "^1.37.3",
     "compressorjs": "^1.2.1",
+    "dompurify": "^3.0.5",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "formik": "^2.4.1",
@@ -37,6 +38,7 @@
     "react-leaflet": "^4.2.1",
     "react-leaflet-custom-control": "^1.3.5",
     "react-paginate": "^8.2.0",
+    "react-quill": "^2.0.0",
     "react-select": "^5.7.3",
     "react-slider": "^2.0.5",
     "react-transition-group": "^4.4.5",
@@ -47,6 +49,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.2",
     "@types/leaflet": "^1.9.3",
     "@types/leaflet-fullscreen": "^1.0.6",
     "@types/lodash.debounce": "^4.0.7",
