--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.24.3",
+    "@next/bundle-analyzer": "^13.4.13",
     "@supabase/supabase-js": "^2.24.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
@@ -27,7 +28,7 @@
     "linkify-html": "^4.1.1",
     "linkifyjs": "^4.1.1",
     "lodash.debounce": "^4.0.8",
-    "next": "^13.4.10",
+    "next": "^13.4.13",
     "postcss": "8.4.24",
     "query-string": "^8.1.0",
     "react": "18.2.0",
@@ -43,6 +44,7 @@
     "react-slider": "^2.0.5",
     "react-transition-group": "^4.4.5",
     "react-window": "^1.8.9",
+    "sharp": "^0.32.4",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "uuid": "^9.0.0",
